k8s/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - image: quay.io/oauth2-proxy/oauth2-proxy:latest
          name: oauth2-proxy
          ports:
            - containerPort: 4180
          args:
            - --provider=google
            - --email-domain=*
            - --cookie-secure=false
            - --http-address=0.0.0.0:4180
---

apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-service
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 4180
      targetPort: 4180

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: stockcompclient.io
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-service
                port:
                  number: 4180
