k8s/stockcomp-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockcomp-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockcomp-client
  template:
    metadata:
      labels:
        app: stockcomp-client
    spec:
      containers:
        - name: stockcomp-client
          image: stockcomp-client-image
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: stockcomp-client-service
spec:
  type: NodePort
  selector:
    app: stockcomp-client
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30455

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockcomp-client-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "stockcompclient.io"
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: stockcomp-client-service
                  port:
                    number: 3000
